cilium-cli/connectivity/builder/manifests/echo-ingress-icmp-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-ingress-from-other-client-icmp-deny
spec:
  description: "Deny other client to contact another client via ICMP"
  endpointSelector:
    matchLabels:
      kind: client
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        other: client
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
    icmps:
    - fields:
      - family: IPv4
        type: 8
      - family: IPv6
        type: 128
